Attempt to improve arrangement of LinkedIn and GitHub links.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -23,8 +23,14 @@
         </div>
         <div id="personal-links">
             <img src="/images/vivianpic.jpeg" alt="Image of Vivian" width="250" height="250">
-            <a href="https://www.linkedin.com/in/vivian-ellis-49832a195/" target="_blank">LinkedIn</a>
-            <a href="https://www.github.com/ellisvivian/" target="_blank">GitHub</a>
+            <div id="link-wrapper">
+                <div id="linkedin">
+                    <a href="https://www.linkedin.com/in/vivian-ellis-49832a195/" target="_blank">LinkedIn</a>
+                </div>
+                <div id="github">
+                    <a href="https://www.github.com/ellisvivian/" target="_blank">GitHub</a>
+                </div>
+            </div>
         </div>
     </div>
     <div id='my-projects'>
