Update About Me content and cycle through images on button click.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -11,34 +11,46 @@
       <h1>Vivian Ellis</h1>
     </div>
     <div id="info-wrapper">
-        <div id="about-me">
-            <h1>About Me</h1>
-            <p>Hi, I'm Vivian, a rising sophomore at Rice University studying Computer Science.
-                I'm originally from Cupertino, CA, but now my residential college is my home.
-            </p>
-            <img src="/images/tfw.jpeg" alt="Image of Wiess College">
-            <p>Click here to learn more about me:</p>
-            <button onclick="addFunFact()">Click me!</button>
-            <div id="fact-container"></div>
+      <div id="about-me">
+        <h1>About Me</h1>
+        <p>Hi, I'm Vivian, a rising sophomore at Rice University studying Computer Science. 
+        </p>
+        <p>At Rice, I am part of RiceApps, an organization where we code projects to improve the lives of Rice students and the greater Houston community.
+          I am also a member of Torque, the women's ultimate frisbee team, which I decided to join in an effort to try something new after spending most of
+          my life as a dancer. Because I have so much love for the warm and welcoming community Rice is, I am also a lunch host for prospective students, 
+          and I will be welcoming new students as an advisor during our orientation week this August. I can most commonly be found at my favorite place on 
+          campus, the Wiess College commons, just studying and laughing with friends. 
+        </p>
+        <p>Back at my home in Cupertino, California, I spend much of my time with family and friends, exploring new places and trying new boba shops. 
+          When I'm not coding I'm happy to pass the time with a good book, a bike ride around the neighborhood, or my favorite movie, Shrek 2. 
+        </p>
+      </div>
+      <div id="personal-links">
+        <img src="/images/vivianpic.jpeg" alt="Image of Vivian" width="250" height="250">
+        <div id="link-wrapper">
+          <div id="linkedin">
+            <a href="https://www.linkedin.com/in/vivian-ellis-49832a195/" target="_blank">LinkedIn</a>
+          </div>
+          <div id="github">
+            <a href="https://www.github.com/ellisvivian/" target="_blank">GitHub</a>
+          </div>
         </div>
-        <div id="personal-links">
-            <img src="/images/vivianpic.jpeg" alt="Image of Vivian" width="250" height="250">
-            <div id="link-wrapper">
-                <div id="linkedin">
-                    <a href="https://www.linkedin.com/in/vivian-ellis-49832a195/" target="_blank">LinkedIn</a>
-                </div>
-                <div id="github">
-                    <a href="https://www.github.com/ellisvivian/" target="_blank">GitHub</a>
-                </div>
-            </div>
-        </div>
+      </div>
     </div>
-    <div id='my-projects'>
-        <h1>My Projects</h1>
-        <ul>
-            <li>blah blah blah</li>
-            <li>more blah blah blah</li>
-        </ul>
+    <div id="my-projects">
+      <h1>My Projects</h1>
+      <ul>
+        <li>blah blah blah</li>
+        <li>more blah blah blah</li>
+      </ul>
+    </div>
+    <div id="my-experiences">
+      <p>Click here to change the image:</p>
+      <button onclick="changeImage()">Click me!</button>
+      <img id="img" src="/images/1.jpeg">
+      <p>Click here to learn more about me:</p>
+      <button onclick="addFunFact()">Click me!</button>
+      <div id="fact-container"></div>
     </div>
   </body>
 </html>
