Update arrangement and margins of divs.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -37,20 +37,22 @@
         </div>
       </div>
     </div>
-    <div id="my-projects">
-      <h1>My Projects</h1>
-      <ul>
-        <li>blah blah blah</li>
-        <li>more blah blah blah</li>
-      </ul>
-    </div>
-    <div id="my-experiences">
-      <p>Click here to change the image:</p>
-      <button onclick="changeImage()">Click me!</button>
-      <img id="img" src="/images/1.jpeg">
-      <p>Click here to learn more about me:</p>
-      <button onclick="addFunFact()">Click me!</button>
-      <div id="fact-container"></div>
+    <div id='experience-wrapper'>
+      <div id="my-projects">
+        <h1>My Projects</h1>
+        <ul>
+          <li>blah blah blah</li>
+          <li>more blah blah blah</li>
+        </ul>
+      </div>
+      <div id="my-experiences">
+        <p>Click here to change the image:</p>
+        <button onclick="changeImage()">Click me!</button>
+        <img id="img" src="/images/1.jpeg">
+        <p>Click here to learn more about me:</p>
+        <button onclick="addFunFact()">Click me!</button>
+        <div id="fact-container"></div>
+      </div>
     </div>
   </body>
 </html>
