Add content and formatting to the My Projects section.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -10,7 +10,7 @@
     <div id="heading">
       <h1>Vivian Ellis</h1>
     </div>
-    <div id="info-wrapper">
+    <div id="top-wrapper">
       <div id="about-me">
         <h1>About Me</h1>
         <p>Hi, I'm Vivian, a rising sophomore at Rice University studying Computer Science. 
@@ -43,19 +43,27 @@
         <div id="fact-container"></div>
       </div>
     </div>
-    <div id='experience-wrapper'>
-      <div id="my-experiences">
-        <h1>Important Aspects of My Life</h1>
-        <button onclick="changeImage()">Click here to see something else.</button>
-        <br></br>
-        <img id="img" src="/images/1.jpg" width="504" height="378">
-      </div>
+    <div id='bottom-wrapper'>
       <div id="my-projects">
         <h1>My Projects</h1>
-        <ul>
-          <li>blah blah blah</li>
-          <li>more blah blah blah</li>
-        </ul>
+        <h3>RiceApps: Friends of Texas Wildlife</h3>
+        <p>On a team composed of four software engineers, two team leads, and one designer, 
+        we collaborated to created a new website for Friends of Texas Wildlife using React.
+        </p>
+        <a href="https://ftwl2019.herokuapp.com/" target="_blank">
+          <button>Visit the site here.</button>
+        </a>
+        <br></br>
+        <div id='team-image'>
+          <img src="/images/riceapps.jpg" width="341.333" height="256">
+          <p>My Team</p>
+        </div>
+      </div>
+      <div id="my-experiences">
+        <h1>Important Aspects of My Life</h1>
+        <img id="img" src="/images/1.jpg" width="504" height="378">
+        <br></br>
+        <button onclick="changeImage()">Click here to see something else.</button>
       </div>
     </div>
   </body>
