Try out new colors and fonts.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -5,8 +5,9 @@
     <title>Vivian Ellis</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
   </head>
-  <body>
+  <body id="body">
     <div id="heading">
       <h1>Vivian Ellis</h1>
     </div>
