Update color scheme and improve button appearance.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
   </head>
   <body id="body">
     <div id="heading">
@@ -30,7 +31,7 @@
         <img src="/images/vivianpic.jpeg" alt="Image of Vivian" width="250" height="250">
         <div id="link-wrapper">
           <div id="fun-fact-button">
-            <button onClick="addFunFact()">Click for a fun fact.</button>
+            <button id="button" onClick="addFunFact()">Click for a fun fact.</button>
           </div>
           <div id="links">
             <a id="link" href="https://www.linkedin.com/in/vivian-ellis-49832a195/" target="_blank">
@@ -52,7 +53,7 @@
         we collaborated to created a new website for Friends of Texas Wildlife using React.
         </p>
         <a href="https://ftwl2019.herokuapp.com/" target="_blank">
-          <button>Visit the site here.</button>
+          <button id="button">Visit the site here.</button>
         </a>
         <br></br>
         <div id='team-image'>
@@ -64,7 +65,7 @@
         <h1>Important Aspects of My Life</h1>
         <img id="img" src="/images/1.jpg" width="504" height="378">
         <br></br>
-        <button onclick="changeImage()">Click here to see something else.</button>
+        <button id="button" onclick="changeImage()">Click to see something else.</button>
       </div>
     </div>
   </body>
