Update to green color scheme.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -58,14 +58,13 @@
         <br></br>
         <div id='team-image'>
           <img src="/images/riceapps.jpg" width="341.333" height="256">
-          <p>My Team</p>
         </div>
       </div>
       <div id="my-experiences">
         <h1>Important Aspects of My Life</h1>
         <img id="img" src="/images/1.jpg" width="504" height="378">
         <br></br>
-        <button id="button" onclick="changeImage()">Click to see something else.</button>
+        <button id="button" onclick="changeImage()">Learn about something else.</button>
       </div>
     </div>
   </body>
