Add timer to make switching to different image and description automatic.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -68,7 +68,7 @@
           </div>
           <div id="description"></div>
         </div>
-        <button id="button" onclick="changeDisplay()">Learn about something else.</button>
+        <button id="button" onclick="stop()">Stay on this item.</button>
       </div>
     </div>
   </body>
