Prep for deployment.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -74,7 +74,7 @@
           <img id="img" src="/images/2.jpg" width="504" height="378">
           <p id="description">At Rice, students are randomly split into 11 residential colleges, which will serve as an
             inclusive community throughout their four years on campus (and beyond). My college is 
-            Wiess college, and from the moment I was welcomed during orientation week it has felt 
+            Wiess College, and from the moment I was welcomed during orientation week it has felt 
             like home. From the friendly faces I see in commons every day to our quirky and exciting 
             traditions, I am truly grateful for my Team Family Wiess!
           </p>
