Address requested changes and avoid direct repeat of fun facts.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -35,10 +35,10 @@
           </div>
           <div id="links">
             <a id="link" href="https://www.linkedin.com/in/vivian-ellis-49832a195/" target="_blank">
-              <img src="/images/linkedinicon.webp" width="30" height="30">
+              <img src="/images/linkedinicon.webp" alt="LinkedIn" width="30" height="30">
             </a>
             <a id="link" href="https://www.github.com/ellisvivian/" target="_blank">
-              <img src="/images/githubicon.svg" width="28" heigth="28">
+              <img src="/images/githubicon.svg" alt="GitHub" width="28" heigth="28">
             </a>
           </div>
         </div>
@@ -50,20 +50,20 @@
         <h1>My Projects</h1>
         <h3>RiceApps: Friends of Texas Wildlife</h3>
         <p>On a team composed of four software engineers, two team leads, and one designer, 
-        we collaborated to created a new website for Friends of Texas Wildlife using React.
+          we collaborated to created a new website for Friends of Texas Wildlife using React.
         </p>
         <a href="https://ftwl2019.herokuapp.com/" target="_blank">
           <button class="button">Visit the site here.</button>
         </a>
         <br></br>
         <div id='team-image'>
-          <img src="/images/riceapps.jpg" width="341.333" height="256">
+          <img src="/images/riceapps.jpg" alt="Image of RiceApps Team" width="341.333" height="256">
         </div>
       </div>
       <div id="my-experiences">
         <h1>Important Aspects of My Life</h1>
         <div class="experience">
-          <img id="img" src="/images/1.jpg" width="504" height="378">
+          <img id="img" src="/images/1.jpg" alt="Image of Cousins" width="504" height="378">
           <p id="description">Family has always been something really important to me, especially my cousins. 
             Every year, we try to get together in what we call "Cuz Unite". During Cuz Unites, 
             we go on wild adventures, play games, and just spend time catching up and enjoying 
@@ -71,7 +71,7 @@
           </p>
         </div>
         <div class="experience">
-          <img id="img" src="/images/2.jpg" width="504" height="378">
+          <img id="img" src="/images/2.jpg" alt="Image of Wiess" width="504" height="378">
           <p id="description">At Rice, students are randomly split into 11 residential colleges, which will serve as an
             inclusive community throughout their four years on campus (and beyond). My college is 
             Wiess College, and from the moment I was welcomed during orientation week it has felt 
@@ -80,7 +80,7 @@
           </p>
         </div>
         <div class="experience">
-          <img id="img" src="/images/3.jpg" width="504" height="378">
+          <img id="img" src="/images/3.jpg" alt="Image of Europe Trip" width="504" height="378">
           <p id="description">The summer after my senior year of high school, I went on an epic month-long European vacation 
             with my family, where we visited The Netherlands, Belgium, France, Scotland, and England. It was 
             such an amazing experience to get to see and explore so many different places, and I am so  
@@ -89,7 +89,7 @@
           </p>
         </div>
         <div class="experience">
-          <img id="img" src="/images/4.jpg" width="504" height="378">
+          <img id="img" src="/images/4.jpg" alt="Image of Cheer Competition" width="504" height="378">
           <p id="description">Ever since I was really little and just twirling around the house with scarves, 
             I've always had a passion for dance. Whether it was performing on stage with my 
             competitive team, at a rally with my high school class, or in the quad with my kpop 
