Fixed typo in My Projects section.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -50,7 +50,7 @@
         <h1>My Projects</h1>
         <h3>RiceApps: Friends of Texas Wildlife</h3>
         <p>On a team composed of four software engineers, two team leads, and one designer, 
-          we collaborated to created a new website for Friends of Texas Wildlife using React.
+          we collaborated to create a new website for Friends of Texas Wildlife using React.
         </p>
         <a href="https://ftwl2019.herokuapp.com/" target="_blank">
           <button class="button">Visit the site here.</button>
