Add button to fetch greeting from server.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -104,5 +104,8 @@
         </div>
       </div>
     </div>
+    <div id="fetch-testing">
+      <button class="button" onclick="getGreeting()">Fetch a greeting!</button>
+      <div id='greeting-container'></div>
   </body>
 </html>
