Fetch messages from server using JSON formatting.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -105,7 +105,9 @@
       </div>
     </div>
     <div id="fetch-testing">
-      <button class="button" onclick="getGreeting()">Fetch a greeting!</button>
-      <div id='greeting-container'></div>
+      <!-- <button class="button" onclick="getGreeting()">Fetch a greeting!</button>
+      <div id='greeting-container'></div> -->
+      <button class="button" onclick="getMessages()">Fetch messages!</button>
+      <div id='messages-container'></div>
   </body>
 </html>
