--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -107,6 +107,20 @@
     <div id="fetch-testing" class="box">
       <!-- <button class="button" onclick="getGreeting()">Fetch a greeting!</button>
       <div id='greeting-container'></div> -->
+      <form action="/data" method="POST">
+        <p>Share your thoughts in a comment!</p>
+        <label for="first-name">First Name:</label><br>
+        <input type="text" id="first-name" name="first-name">
+        <br></br>
+        <label for="last-name">Last Name:</label><br>
+        <input type="text" id="last-name" name="last-name">
+        <br></br>
+        <label for="comment">Comment:</label><br>
+        <textarea id="comment" name="comment"></textarea>
+        <br></br>
+        <input type="submit">
+      </form>
+      <br></br>
       <button class="button" onclick="getMessages()">Fetch messages!</button>
       <div id='messages-container'></div>
   </body>
