--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -121,7 +121,7 @@
         <input type="submit">
       </form>
       <br></br>
-      <button class="button" onclick="getMessages()">Fetch messages!</button>
+      <!-- <button class="button" onclick="getMessages()">Fetch messages!</button> -->
       <div id='messages-container'></div>
   </body>
 </html>
