Fetch and display comments from the Datastore.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
   </head>
-  <body id="body" onload="initialDisplay()">
+  <body id="body" onload="initialDisplay();">
     <div id="heading">
       <h1>Vivian Ellis</h1>
     </div>
@@ -122,6 +122,6 @@
       </form>
       <br></br>
       <!-- <button class="button" onclick="getMessages()">Fetch messages!</button> -->
-      <div id='messages-container'></div>
+      <div id='comment-container'></div>
   </body>
 </html>
