Create Comment class to represent comments intead of list.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -116,7 +116,7 @@
         <input type="text" id="last-name" name="last-name">
         <br></br>
         <label for="comment">Comment:</label><br>
-        <textarea id="comment" name="comment"></textarea>
+        <textarea id="comment-text" name="comment-text"></textarea>
         <br></br>
         <input type="submit">
       </form>
