Complete simple login/logout feature to post a comment.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -109,6 +109,7 @@
         <h4>Anything on your mind? Share your thoughts in a comment!</h4>
         <div id="comment-submission">
           <div id="user-greeting"></div>
+          <br>
           <form action="/data" method="POST">
             <label for="first-name">First Name:</label><br>
             <input type="text" id="first-name" class="input" name="first-name" onkeydown="return event.key != 'Enter';">
@@ -122,6 +123,7 @@
             <input type="submit" class="button" value="Submit.">
           </form>
         </div>
+        <div id="login-statement"></div>
         <br>
         <h4>Not liking the number of comments you're seeing? Change the amount that can be displayed!</h4>
         <form>
