Use popup form for user changing name.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -104,6 +104,14 @@
         </div>
       </div>
     </div>
+    <div id="name-form-container">
+      <form id="name-form" action="/name-data" method="POST">
+        <label for="name">Enter the name you would like to post under:</label><br>
+        <input type="text" name="name" class="input"></input>
+        <br></br>
+        <input type="submit" class="button" value="Submit." onclick="hideChangeName()">
+      </form>
+    </div>
     <div id="comment-section" class="box">
       <div id="comment-controls">
         <h4>Anything on your mind? Share your thoughts in a comment!</h4>
