--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -58,36 +58,36 @@
         </a>
         <br></br>
         <div id='team-image'>
-          <img src="/images/riceapps.jpg" alt="Image of RiceApps Team" width="341.333" height="256">
+          <img src="/images/riceapps.jpg" alt="Image of RiceApps Team" width="290.133" height="217.6">
         </div>
       </div>
       <div id="my-experiences" class="box">
         <h1>Important Aspects of My Life</h1>
-        <div class="img-map-wrapper">
-          <img class="img-experience" id="img" src="/images/1.jpg" alt="Image of Cousins" width="504" height="378">
-          <img class="img-experience" id="img" src="/images/2.jpg" alt="Image of Wiess" width="504" height="378">
-          <img class="img-experience" id="img" src="/images/3.jpg" alt="Image of Europe Trip" width="504" height="378">
-          <img class="img-experience" id="img" src="/images/4.jpg" alt="Image of Cheer Competition" width="504" height="378">
+        <div id="img-map-wrapper">
+          <img class="img-experience" src="/images/1.jpg" alt="Image of Cousins" width="453.6" height="340.2">
+          <img class="img-experience" src="/images/2.jpg" alt="Image of Wiess" width="453.6" height="340.2">
+          <img class="img-experience" src="/images/3.jpg" alt="Image of Europe Trip" width="453.6" height="340.2">
+          <img class="img-experience" src="/images/4.jpg" alt="Image of Cheer Competition" width="453.6" height="340.2">
           <div id="map"></div>
         </div>
-        <p class="descrip-experience" id="description">Family has always been something really important to me, especially my cousins. 
+        <p class="descrip-experience">Family has always been something really important to me, especially my cousins. 
             Every year, we try to get together in what we call "Cuz Unite". During Cuz Unites, 
             we go on wild adventures, play games, and just spend time catching up and enjoying 
             each other's company. Around my cousins I always feel loved and free to be myself.
         </p>
-        <p class="descrip-experience" id="description">At Rice, students are randomly split into 11 residential colleges, which will serve as an
+        <p class="descrip-experience">At Rice, students are randomly split into 11 residential colleges, which will serve as an
             inclusive community throughout their four years on campus (and beyond). My college is 
             Wiess College, and from the moment I was welcomed during orientation week it has felt 
             like home. From the friendly faces I see in commons every day to our quirky and exciting 
             traditions, I am truly grateful for my Team Family Wiess!
         </p>
-        <p class="descrip-experience" id="description">The summer after my senior year of high school, I went on an epic month-long European vacation 
+        <p class="descrip-experience">The summer after my senior year of high school, I went on an epic month-long European vacation 
             with my family, where we visited The Netherlands, Belgium, France, Scotland, and England. It was 
             such an amazing experience to get to see and explore so many different places, and I am so  
             appreciative of my family for making it happen. Hopefully I can continue to travel the world 
             on my own someday.
         </p>
-          <p class="descrip-experience" id="description">Ever since I was really little and just twirling around the house with scarves, 
+          <p class="descrip-experience">Ever since I was really little and just twirling around the house with scarves, 
             I've always had a passion for dance. Whether it was performing on stage with my 
             competitive team, at a rally with my high school class, or in the quad with my kpop 
             dance club, I had so much fun expressing myself through movement. Sometimes the 
