--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -100,13 +100,19 @@
         </div>
       </div>
     </div>
-    <div id="name-form-container">
-      <form id="name-form" action="/name-data" method="POST">
+    <div id="name-form-container" class="popup">
+      <form id="name-form" class="popup-text" action="/name-data" method="POST">
         <label for="name">Enter the name you would like to post under:</label><br>
         <input type="text" name="name" class="input"></input>
         <br></br>
         <input type="submit" class="button" value="Submit." onclick="hideChangeName()">
       </form>
+    </div>
+    <div id="like-warning" class="popup">
+        <div class="popup-text">
+          <p>Please login to like a comment.</p>
+          <button class="button" onclick="hideLikeWarning()">OK.</button>
+        </div>
     </div>
     <div id="comment-section" class="box">
       <div id="comment-controls">
